--- a/starwars.Rmd
+++ b/starwars.Rmd
@@ -31,9 +31,9 @@ ggplot(starwars,
        aes(x = height, y = mass, color = gender, size = birth_year)) +
   geom_point(color = "pink") +
   labs(
-    title = "Star War Character Mass By Weight",
-    x = "Height", 
-    y = "Mass",
+    title = "The Relationship Between Star Wars Character's Mass and Weight",
+    x = "Height (cm)", 
+    y = "Mass (kg)",
     size = "Birth Year"
     )
 ```
@@ -42,9 +42,15 @@ ggplot(starwars,
 
 (A little bit of starter code is provided below, and the code chunk is set to not be evaluated with `eval = FALSE` because the current code in there is not valid code and hence the document wouldn't knit. Once you replace the code with valid code, set the chunk option to `eval = TRUE`, or remove the `eval` option altogether since it's set to `TRUE` by default.)
 
-```{r barplot, eval = FALSE}
-ggplot(starwars, aes(___)) +
-  geom___
+```{r barplot, eval = TRUE}
+ggplot(starwars, aes(y = eye_color)) +
+  geom_bar()+
+  labs(
+    title = "Star Wars Characters Eye Color Distribution",
+    x = "Frequency",
+    y = "Height (cm)"
+  )
+
 ```
 
 ### Pick a single numerical variable and make a histogram of it.
@@ -52,23 +58,46 @@ ggplot(starwars, aes(___)) +
 (This time no starter code is provided, you're on your own!)
 
 ```{r histogram}
-
+ggplot(starwars, aes(height)) +
+  geom_histogram(binwidth = 10)+
+  labs(
+    title = "Star Wars Character Heights",
+    x = "Height (cm)",
+    y = "Frequency"
+  )
 ```
 
 ### Pick a numerical variable and a categorical variable and make a visualisation (you pick the type!) to visualise the relationship between the two variables. Along with your code and output, provide an interpretation of the visualisation.
 
-```{r num-cat}
 
+
+```{r num-cat}
+ggplot(starwars, aes(x = height, fill = gender)) +
+  geom_histogram(binwidth = 10, alpha = 0.5)+
+  labs(
+    title = "The Relationship Star Wars Character Height and Gender",
+    x = "Height (cm)",
+    y = "Frequency"
+  )
 ```
 
+Among taller characters in Star Wars, masculine characters are more represented than feminine characters.
 ### Pick two categorical variables and make a visualisation to visualise the relationship between the two variables. Along with your code and output, provide an interpretation of the visualisation.
 
 ```{r cat-cat}
-
+ggplot(starwars, aes(x = gender, fill = homeworld)) +
+  geom_bar(position = "fill", alpha = 0.5)
 ```
 
 ### Pick two numerical variables and two categorical variables and make a visualisation that incorportes all of them and provide an interpretation with your answer.
 
 ```{r multi}
+ggplot(starwars, 
+       mapping = aes(x = height,
+                     y = mass,
+                     color = species,
+                     shape = gender)) +
+  geom_point()+
+  facet_grid(~gender)
 
 ```
